change the cluster creation

--- a/NA_project.ipynb
+++ b/NA_project.ipynb
@@ -682,21 +682,27 @@
     "movieIds_copy = movieIds_available.copy()\n",
     "\n",
     "num_cluster = 0\n",
+    "index1 = 1\n",
     "while len(movieIds_copy) > 0:\n",
-    "    for id_x in tqdm(movieIds_copy):\n",
-    "        list_movies = []\n",
-    "        index_cluster[id_x] = num_cluster\n",
-    "        list_movies.append(id_x)\n",
-    "        for id_y in movieIds_copy:\n",
-    "            if id_x != id_y:\n",
-    "                sim = cosine_similarity(correlation_matrix[movieIds_available.index(id_x)], correlation_matrix[movieIds_available.index(id_y)])\n",
-    "                if sim>= threshold:\n",
-    "                    index_cluster[id_y] = num_cluster\n",
-    "                    list_movies.append(id_y)\n",
-    "                    movieIds_copy.remove(id_y)\n",
-    "        movieIds_copy.remove(id_x)\n",
-    "        movie_cluster[num_cluster] = list_movies\n",
-    "        num_cluster += 1\n",
+    "    #pick always the first of the actual list\n",
+    "    id_x = movieIds_copy[0]\n",
+    "    list_movies = []\n",
+    "    index_cluster[id_x] = num_cluster\n",
+    "    list_movies.append(id_x)\n",
+    "    #now pick all the others that follow\n",
+    "    while (index1 < len(movieIds_copy)):\n",
+    "        id_y = movieIds_copy[index1]\n",
+    "        sim = cosine_similarity(correlation_matrix[movieIds_available.index(id_x)], correlation_matrix[movieIds_available.index(id_y)])\n",
+    "        if sim>= threshold:\n",
+    "            index_cluster[id_y] = num_cluster\n",
+    "            list_movies.append(id_y)\n",
+    "            movieIds_copy.remove(id_y)\n",
+    "        else:\n",
+    "            index1 += 1\n",
+    "    movieIds_copy.remove(id_x)\n",
+    "    movie_cluster[num_cluster] = list_movies\n",
+    "    num_cluster += 1\n",
+    "    index1 = 1\n",
     "    \n",
     "print(\"Number of cluster is: \" , num_cluster)"
    ]
@@ -834,25 +840,28 @@
     "userIds_copy = userIds_available.copy()\n",
     "\n",
     "num_cluster = 0\n",
+    "index2 = 1\n",
     "while len(userIds_copy) > 0:\n",
-    "    for id_x in tqdm(userIds_copy):\n",
-    "        list_users = []\n",
-    "        user_index_cluster[id_x] = num_cluster\n",
-    "        list_users.append(id_x)\n",
-    "        for id_y in userIds_copy:\n",
-    "            # If it's not the same user\n",
-    "            if id_x != id_y:\n",
-    "                # Calculate the cosine similarity\n",
-    "                sim = cosine_similarity_users(ratings_matrix[userIds_available.index(id_x)], \n",
-    "                                              ratings_matrix[userIds_available.index(id_y)])\n",
-    "                # If they are similar enough\n",
-    "                if sim >= threshold:\n",
-    "                    user_index_cluster[id_y] = num_cluster\n",
-    "                    list_users.append(id_y)\n",
-    "                    userIds_copy.remove(id_y)\n",
-    "        userIds_copy.remove(id_x)\n",
-    "        users_cluster[num_cluster] = list_users\n",
-    "        num_cluster += 1\n",
+    "    #for id_x in tqdm(userIds_copy):\n",
+    "    id_x = userIds_copy[0]\n",
+    "    list_users = []\n",
+    "    user_index_cluster[id_x] = num_cluster\n",
+    "    list_users.append(id_x)\n",
+    "    #for id_y in userIds_copy:\n",
+    "    while ( index2 < len(userIds_copy)):\n",
+    "        id_y = userIds_copy[index2]\n",
+    "        sim = cosine_similarity_users(ratings_matrix[userIds_available.index(id_x)], ratings_matrix[userIds_available.index(id_y)])\n",
+    "        # If they are similar enough\n",
+    "        if sim >= threshold:\n",
+    "            user_index_cluster[id_y] = num_cluster\n",
+    "            list_users.append(id_y)\n",
+    "            userIds_copy.remove(id_y)\n",
+    "        else :\n",
+    "            index2 += 1\n",
+    "    userIds_copy.remove(id_x)\n",
+    "    users_cluster[num_cluster] = list_users\n",
+    "    num_cluster += 1\n",
+    "    index2 = 1\n",
     "    \n",
     "print(\"Number of cluster is: \" , num_cluster)"
    ]
